amelden button small fix

--- a/src/Components/Home/Header/style.css
+++ b/src/Components/Home/Header/style.css
@@ -50,6 +50,7 @@ html{
     color: white !important;
     background-color: red;
     border-radius: 50px;
+    padding-left: 25px !important;
 }
 @media only screen and (max-width:766px){
     .navbar-wrapper{
